QuickLintPlugin: Fix var property type checking

We accidentally checked the element type instead of the binding type.

Also added some more tests to make sure this doesn't happen again.

Fixes: QTBUG-104430
Change-Id: I5848b937b7bf4b15ad09adbe1d2a3941c4572fb5
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>